@@ -18,6 +18,9 @@
 
 package org.apache.tajo.catalog;
 
+import parquet.hadoop.ParquetWriter;
+import parquet.hadoop.metadata.CompressionCodecName;
+
 public class CatalogConstants {
   public static final String STORE_CLASS="tajo.catalog.store.class";
 
@@ -64,4 +67,30 @@ public class CatalogConstants {
   public static final String DEFAULT_FIELD_DELIMITER = "|";
   public static final String DEFAULT_BINARY_SERDE = "org.apache.tajo.storage.BinarySerializerDeserializer";
   public static final String DEFAULT_TEXT_SERDE = "org.apache.tajo.storage.TextSerializerDeserializer";
+
+  public static final String PARQUET_DEFAULT_BLOCK_SIZE;
+  public static final String PARQUET_DEFAULT_PAGE_SIZE;
+  public static final String PARQUET_DEFAULT_COMPRESSION_CODEC_NAME;
+  public static final String PARQUET_DEFAULT_IS_DICTIONARY_ENABLED;
+  public static final String PARQUET_DEFAULT_IS_VALIDATION_ENABLED;
+
+  static {
+    PARQUET_DEFAULT_BLOCK_SIZE =
+        Integer.toString(ParquetWriter.DEFAULT_BLOCK_SIZE);
+    PARQUET_DEFAULT_PAGE_SIZE =
+        Integer.toString(ParquetWriter.DEFAULT_PAGE_SIZE);
+
+    // When parquet-hadoop 1.3.3 is available, this should be changed to
+    // ParquetWriter.DEFAULT_COMPRESSION_CODEC_NAME.
+    PARQUET_DEFAULT_COMPRESSION_CODEC_NAME =
+        CompressionCodecName.UNCOMPRESSED.name().toLowerCase();
+
+    // When parquet-hadoop 1.3.3 is available, this should be changed to
+    // ParquetWriter.DEFAULT_IS_DICTIONARY_ENABLED.
+    PARQUET_DEFAULT_IS_DICTIONARY_ENABLED = "true";
+
+    // When parquet-hadoop 1.3.3 is available, this should be changed to
+    // ParquetWriter.DEFAULT_IS_VALIDATING_ENABLED.
+    PARQUET_DEFAULT_IS_VALIDATION_ENABLED = "false";
+  }
 }
